[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Eric Apgar" }]
urls = { "Homepage" = "https://github.com/EricApgar" }
requires-python = ">=3.13"

dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"